--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,20 @@
       <version>40.0.0</version>
     </dependency>
 
-    <!-- Use the following to add "mvn install:install-file -Dfile=../test/partner_stub.jar -DgroupId=com.sforce.soap.partner -DartifactId=partner_stub -Dversion=1.0.0.0 -Dpackaging=jar -DgeneratePom=true" -->
     <dependency>
-      <groupId>com.sforce.soap.partner</groupId>
+      <groupId>com.noenthu.wscpartner</groupId>
       <artifactId>partner_stub</artifactId>
       <version>1.0.0.0</version>
     </dependency>
+
+    <!-- Use the following to add "mvn install:install-file -Dfile=../test/partner_stub.jar -DgroupId=com.sforce.soap.partner -DartifactId=partner_stub -Dversion=1.0.0.0 -Dpackaging=jar -DgeneratePom=true" -->
+    <!--<dependency>
+      <groupId>com.sforce.soap.partner</groupId>
+      <artifactId>partner_stub</artifactId>
+      <version>1.0.0.0</version>
+    </dependency>-->
+
+
 
   </dependencies>
   <build>
@@ -47,6 +55,31 @@
           </manifest>
         </archive>
       </configuration>
+    </plugin>
+
+    <plugin>
+      <!-- Install partner_stub.jar local module -->
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-install-plugin</artifactId>
+      <version>2.5.2</version>
+      <executions>
+        <execution>
+          <id>install-external</id>
+          <phase>clean</phase>
+          <configuration>
+            <file>${basedir}/lib/partner_stub.jar</file>
+            <repositoryLayout>default</repositoryLayout>
+            <groupId>com.noenthu.wscpartner</groupId>
+            <artifactId>partner_stub</artifactId>
+            <version>1.0.0.0</version>
+            <packaging>jar</packaging>
+            <generatePom>true</generatePom>
+          </configuration>
+          <goals>
+            <goal>install-file</goal>
+          </goals>
+        </execution>
+      </executions>
     </plugin>
   </plugins>
 </build>
