--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,9 @@
   </dependencies>
   <build>
   <plugins>
+    <!-- Build an executable JAR -->
+    <!-- Run using mvn exec:java -Dexec.mainClass="com.noenthu.wscapp.App" -->
     <plugin>
-      <!-- Build an executable JAR -->
-      <!-- Run using mvn exec:java -Dexec.mainClass="com.noenthu.wscapp.App" -->
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-jar-plugin</artifactId>
       <version>3.0.2</version>
@@ -57,8 +57,23 @@
       </configuration>
     </plugin>
 
+    <!-- To bundle all required libraries -->
     <plugin>
-      <!-- Install partner_stub.jar local module -->
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-shade-plugin</artifactId>
+      <version>3.0.0</version>
+      <executions>
+        <execution>
+          <phase>package</phase>
+          <goals>
+            <goal>shade</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
+
+    <!-- Install partner_stub.jar local module -->
+    <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-install-plugin</artifactId>
       <version>2.5.2</version>
@@ -81,6 +96,7 @@
         </execution>
       </executions>
     </plugin>
+
   </plugins>
 </build>
 </project>
